What's new...

Mar 19/2023 : JF/39.0
  - jfTorrent/0.6
    - added support for DHT and FAST protocols
  - more code cleanups

Mar 12/2023 : JF/38.4
  - fixed RGB order issue with javaforce.ui.Image to match java image loader
  - more code cleanups  

Mar 11/2023 : JF/38.3
  - lots of code cleanups
    - fixed all deprecated code
    - fixed all unchecked code
    - still 7 occurances that can't be fixed due to deps
      - mostly java clipboard and jsch
      - see jfdesktop / jffile / jfftp / jfvideo
    - you can use following environment variable to check for deprecated or unchecked code:
      set JDK_JAVAC_OPTIONS=-Xlint:unchecked -Xlint:deprecation

Mar 9/2023 : JF/38.2
  - javaforce.SMTP client now supports text/html alternatives and email attachments
    - if you were using the CLI you will have to change your parameters

Mar 1/2023 : JF/38.1
  - jfLinux now fully supports ArchLinux
    - Go Canada!

Feb 26/2023 : JF/38.0
  - jfLinux is Bourne Again!
    - initially released in 2012 and updated in 2014 it's been nearly a decade since it's been working
    - nearly 100 commits to revive this large project
    - rather then release another ISO there are instructions in linux/readme.txt to install
      the desktop environment on a minimal linux system (Debian or Fedora)
    - Enjoy!

Feb 8/2023 : JF/37.2
  - fixed many linux packaging issues
  - repo for Debian AMD64 + ARM64 are updated on sf.net

Feb 6/2023 : JF/37.1
  - jfSOCKS/0.11
    - minor fixes to config
  - jfEdit/0.20
    - add project panel
  - add javaforce.utils.ScriptEx
  - fix linux issues

Jan 6/2023 : JF/37.0
  - jfMonitor/0.4
    - ignore readonly file systems which usually appear 100% full
  - jfmping
    - new utility to monitor multiple devices
  - added IPL printing
  - added Quaternion and Euler (Angles3) math

Aug 3/2022 : JF/36.1
  - jfEdit/0.19
    - added file change detection
  - new : javaforce.service.SMTP
    - simple SMTP service
  - new : javaforce.LDAP
    - LDAP client
