@@ -1,6 +1,6 @@
 <project xmlns:if="ant:if" xmlns:unless="ant:unless">
   <!-- JavaForce version -->
-  <property name="javaforce-version" value="39.0"/>
+  <property name="javaforce-version" value="40.0"/>
   <!-- native dependancies versions -->
   <property name="glfw-version" value="3.3.1"/>
   <!-- Maven Java Dependancies versions -->
